# TOTP.Generator

./: .clang-format  CMakeLists.txt  otp.cc  readme.md
